feat : thermometer 활동내역 등록 기능추가
