# src/common/swagger/swagger-output.json
@@ -754,6 +754,111 @@
                 }
             }
         },
+        "/user/createThermometer": {
+            "post": {
+                "tags": ["Users"],
+                "summary": "열정온도계 활동내역 작성하기",
+                "description": "path : competition, outside, qnet, intern, language ",
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "path": {
+                                        "type": "string",
+                                        "example": "competition, outside, qnet, intern, language 중 하나 작성"
+                                    },
+                                    "createThermometer": {
+                                        "type": "object",
+                                        "example": {
+                                            "category": "#기획/아이디어",
+                                            "activeTitle": "2023 meta Spark AR콘텐츠 공모전",
+                                            "activeContent": "활동 내용 작성",
+                                            "period": "2022.01.01 ~ 2022.02.01 (intern인 경우에만 추가)",
+                                            "score": "980(type :string)(language인 경우에만 추가)"
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "응답 성공",
+                        "content": {
+                            "application/json": {
+                                "examples": {
+                                    "열정온도 활동내역 등록 성공": {
+                                        "value": {
+                                            "success": true
+                                        }
+                                    },
+                                    "열정온도 활동내역 등록 실패": {
+                                        "value": {
+                                            "success": false
+                                        }
+                                    }
+                                },
+                                "schema": {
+                                    "oneOf": [
+                                        {
+                                            "type": "object",
+                                            "properties": {
+                                                "true": {
+                                                    "type": "boolean"
+                                                }
+                                            }
+                                        },
+                                        {
+                                            "properties": {
+                                                "false": {
+                                                    "type": "boolean"
+                                                }
+                                            }
+                                        }
+                                    ]
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "요청 형식 에러",
+                        "content": {
+                            "application/json": {
+                                "example": {
+                                    "error": [
+                                        "path : path must be a string",
+                                        "category : category must be a string",
+                                        "activeTitle : activeTitle must be a string",
+                                        "activeContent : activeContent must be a string",
+                                        "period : period must be a string (intern인 경우에만 추가)",
+                                        "score : score must be a string (language인 경우에만 추가)"
+                                    ]
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "서버 에러",
+                        "content": {
+                            "application/json": {
+                                "example": {
+                                    "error": "서버 문제"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/user/updateProfile": {
             "patch": {
                 "tags": ["Users"],
